--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,10 +24,11 @@ stages:
         steps:
           - checkout: self
 
-          - task: UseJavaVersion@1
+          - task: JavaToolInstaller@0
             inputs:
               versionSpec: '17'
-              jdkArchitecture: 'x64'
+              jdkArchitectureOption: 'x64'
+              jdkSourceOption: 'PreInstalled'
             displayName: "Set up JDK 17"
 
           - task: Cache@2
