--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,4 +39,4 @@ jobs:
         aws-region: ap-south-1
 
     - name: Upload APK to S3
-      run: aws s3 cp app/build/outputs/apk/release/app-release.apk s3://YOUR_BUCKET_NAME/ --acl public-read
+      run: aws s3 cp app/build/outputs/apk/release/app-release.apk s3://expense-tracker-app-ci-cd/ --acl public-read
